--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="author" content="Zach M">
     <link rel="stylesheet" href="css/graph.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://unpkg.com/@popperjs/core@2">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
@@ -46,7 +47,7 @@
                     <div class="form-row">
                         <div class="col-12 col-md-9 mb-2 mb-md-0">
                             <input type="text" class="form-control form-control-lg" placeholder="Enter a term to be graphed..." id="search">
-                            <div class="error-text">Please enter a single word.</div>
+                            <div class="error-text" hidden>Please enter a single word.</div>
                         </div>
                         <div class="col-12 col-md-3">
                             <button class="btn btn-block btn-lg btn-primary" onclick="javascript:run()">Build</button>
@@ -217,11 +218,11 @@
                         </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
-                            <a href="#">Terms of Use</a>
+                            <a href="#" data-toggle="tooltip" data-placement="top" title="This is only here to make me look professional. Shh.">Terms of Use</a>
                         </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
-                            <a href="#">Privacy Policy</a>
+                            <a href="#" data-toggle="tooltip" data-placement="top" title="This is only here to make me look professional. Shh.">Privacy Policy</a>
                         </li>
                     </ul>
                     <p class="text-muted small mb-4 mb-lg-0">&copy; ego-grapher.com 2020. All Rights Reserved.</p>
