un-responsified table

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <p class="descriptors">Enter a term, press "Build" and see for yourself! Since creating visual graphs can be a little demanding, it may take up to a minute or two to draw the graph, please be patient! </p>
             <p class="descriptors">When you hit build, your term is fed into an external URL which returns a set of XML results containing the Google autocomplete suggestions for that term followed by "vs". The top 5 "cleaned" (single word, no double terms, etc.) results are
                 processed to form a series of nodes. This may leave us with the following result:</p>
-            <table class="table col-4 table-striped table-bordered table-hover table-sm table-responsive-sm">
+            <table class="table col-4 table-striped table-bordered table-hover table-sm">
                 <thead class="thead-light">
                     <tr>
                         <th scope="col">Search Term</th>
