--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <section class="py-5" id="about">
         <div class="container">
             <h1>About Me and Contact</h1>
-            <p class="descriptors">This website and tool were built by me, Zachary Maludzinski. I'm a fifth year Computer Science student currently studying at UBC in Kelowna, British Columbia, Canada.
+            <p class="descriptors">This website and tool were built by me, Zachary Maludzinski. I'm a software engineer currently living in Kelowna, British Columbia, Canada.
 
             </p>
             <p>If you’d like to get in touch, please email me at
@@ -219,7 +219,7 @@
     </section>
 
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer class="footer bg-light">
         <div class="container">
             <div class="row">
@@ -230,11 +230,11 @@
                         </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="This is only here to make me look professional. Shh.">Terms of Use</a>
+                            <a href="#">Terms of Use</a>
                         </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="This is only here to make me look professional. Shh.">Privacy Policy</a>
+                            <a href="#">Privacy Policy</a>
                         </li>
                     </ul>
                     <p class="text-muted small mb-4 mb-lg-0">&copy; ego-grapher.com 2020. All Rights Reserved.</p>
@@ -242,6 +242,7 @@
             </div>
         </div>
     </footer>
+-->
 </body>
 
 </html>
