--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-xl-9 mx-auto">
                     <h1>Ego-Grapher</h1>
-                    <p class="mb-5 lead">Enter a single word and generate your own ego graph.</p>
+                    <p class="mb-5 lead">Enter a single bird and generate your own ego graph.</p>
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto" id="graph-area">
                     <div class="form-row">
